<resources>
    <string name="app_name">GAMirror</string>

    <string name="do_not_use">Do not use</string>

    <string name="pref_general_settings">Settings</string>
    <string name="pref_fav_settings">Favourite apps</string>

    <string name="setting_category_general">General</string>
        <string name="setting_goto_home_at_start">Goto home at start</string>
        <string name="setting_goto_home_at_stop">Goto home at stop</string>
        <string name="setting_launch_app_at_start">LAunch app at stop</string>
        <string name="setting_goto_home_at_double_tap">(Root) Goto home at double tap</string>
        <string name="setting_go_back_at_2finger_tap">(Root) Go back at 2 finger tap</string>

    <string name="setting_category_toolbar">Toolbar</string>
        <string name="setting_show_left_toolbar">Show left toolbar</string>
        <string name="setting_show_left_toolbar_use_system_key">"Use system keys instead of favorites."</string>
        <string name="setting_left_toolbar_size">"Toolbar width (50 ~ 100)"</string>
        <string name="setting_left_toolbar_show_battery_level">Show battery level</string>
        <string name="setting_left_toolbar_auto_hide_time">Auto hide time (sec, 0: disabled)</string>
        <string name="setting_left_toolbar_floating">Enable floating mode</string>
        <string name="setting_left_toolbar_floating_desc">Tap the bottom left corner to open the toolbar.</string>

    <string name="setting_category_audio">Audio</string>
        <string name="setting_request_audio_focus_at_start">"Request audio focus at start"</string>
        <string name="setting_request_audio_focus_at_start_desc">""</string>

    <string name="setting_category_brightness">Brightness</string>
        <string name="setting_overwrite_brightness">Overwrite screen brightness</string>
        <string name="setting_overwrite_brightness_value">"Screen brightness value (0 ~ 255)"</string>


    <string name="setting_category_rotaion">Rotation</string>
        <string name="setting_orientation_method">Screen rotation</string>

        <string name="setting_orientation_rotation">Rotation degree</string>
        <string name="setting_reset_screen_rotation_on_stop">Restore rotation on focus lost</string>

    <string name="setting_category_screen_size">Screen size (Root)</string>
        <string name="setting_immersive_mode">Immersive mode</string>

    <string-array name="pref_orientation_list_titles">
        <item>None</item>
        <item>Force</item>
    </string-array>

    <string-array name="pref_rotation_list_titles">
        <item>0 degree</item>
        <item>90 degree</item>
        <item>180 degree</item>
        <item>270 degree</item>
    </string-array>


    <string-array name="pref_immersive_list_titles">
        <item>None</item>
        <item>Hide Status</item>
        <item>Hide Navigation</item>
        <item>Full immersive</item>
    </string-array>


    <string name="deselect_all">Deselect All</string>

    <string name="pref_action_2finger_tap">When two finger tap (Root)</string>
    <string name="pref_action_double_tap">When double tap (Root)</string>

    <string-array name="pref_actions">
        <item>None</item>
        <item>Back</item>
        <item>Kill current app</item>
        <item>Go to Home</item>
        <item>Toggle left toolbar</item>
    </string-array>

    <string name="required_accessibility_permissions">"Access permission is required to generate global key events.
Please enable it in Settings."</string>



    <string name="setting_category_action_when_power">Power Saver (Root)</string>
        <string name="setting_action_when_power_unplugged">When power unplugged</string>
        <string name="setting_action_when_power_plugged">When power plugged</string>

    <string-array name="setting_action_when_power_unplugged">
        <item>None</item>
        <item>Turn on airplane mode</item>
        <item>Turn on battery saver</item>
        <item>Both</item>
    </string-array>

    <string-array name="setting_action_when_power_plugged">
        <item>None</item>
        <item>Turn off airplane mode</item>
        <item>Turn off battery saver</item>
        <item>Both</item>
    </string-array>





    <!-- values -->
    <string-array name="setting_action_when_power_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>


    <string-array name="pref_actions_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>

    <string-array name="pref_orientation_list_values">
        <item>0</item>
        <item>2</item>
    </string-array>

    <string-array name="pref_rotation_list_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="pref_immersive_list_values">
        <item>null*</item>
        <item>immersive.status=*</item>
        <item>immersive.navigation=*</item>
        <item>immersive.full=*</item>
    </string-array>

</resources>
